<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtHoras"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edtHoras"
        android:layout_alignParentStart="true"
        android:layout_weight="1"
        android:text="@string/strTrabajadas" />

    <EditText
        android:id="@+id/edtSalario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/edtHoras"
        android:layout_marginTop="11dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/txtSalario"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edtSalario"
        android:layout_alignParentStart="true"
        android:layout_weight="1"
        android:text="@string/strSalario" />

    <EditText
        android:id="@+id/edtHoras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="102dp"
        android:text="@string/txtMsg"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnCalculaSalario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_weight="1"
        android:text="@string/btnCalcular" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edtResultado"
        android:layout_alignStart="@+id/txtHoras"
        android:text="@string/strResultado" />

    <EditText
        android:id="@+id/edtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="139dp"
        android:ems="10"
        android:inputType="number" />

</RelativeLayout>